--- a/src/pages/AdminHomePage.css
+++ b/src/pages/AdminHomePage.css
@@ -1,8 +1,8 @@
-.button{
+/* .button{
     padding:10px;
 }
 .buttons{
     margin-top: 50px;
     margin-bottom: 30px;
     padding-left: 43vw;
-}
+} */
