--- a/src/pages/RegisterShopPage.css
+++ b/src/pages/RegisterShopPage.css
@@ -1,20 +1,21 @@
-.form-container-1 {
+.form-container-11 {
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 80%;
-    margin: 100px auto;
+    margin: 0 auto;
     padding: 20px;
     background-color: #ecf5ed;
     border-radius: 10px;
   }
   
-  .form-label-1 {
+  .form-label-11 {
     font-weight: bold;
     margin-bottom: 5px;
   }
   
-  .form-control-1 {
+  .form-control-11 {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
@@ -23,13 +24,13 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
   
-  .form-control-1:focus {
+  .form-control-11:focus {
     outline: none;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   }
   
-  .submit-btn-1 {
-    width: 22%;
+  .submit-btn-11 {
+    width: 100%;
     padding: 10px;
     border: none;
     border-radius: 5px;
@@ -39,7 +40,7 @@
     cursor: pointer;
   }
   
-  .submit-btn-1:hover {
+  .submit-btn-11:hover {
     background-color: #449d44;
   }
   
